syntax = "proto3";

package example;

import "scalapb/scalapb.proto";

option java_multiple_files = true;
option java_package        = "com.example.rpclib";
option objc_class_prefix   = "TAPI";

option (scalapb.options).flat_package = true;

service ExampleService {
  rpc Unary           (       Request) returns (       Response);
  rpc ServerStreaming (       Request) returns (stream Response);
  rpc ClientStreaming (stream Request) returns (       Response);
  rpc BidiStreaming   (stream Request) returns (stream Response);
}

message Request {
  string id = 1;
}

message Response {
  string id = 1;
}
